--- a/src/renderer/css/styles.css
+++ b/src/renderer/css/styles.css
@@ -560,7 +560,7 @@ html {
 
 body {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  background-color: transparent;
+  background-color: rgb(17 24 39 / 0.9);
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
   height: 100vh;
@@ -576,6 +576,40 @@ body {
   -webkit-user-select: text;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
   /* Enhanced text visibility */
+}
+
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
 }
 
 /* Draggable title bar area */
@@ -624,7 +658,15 @@ body {
 
 /* Ensure all text content is selectable */
 
-p, span, div:not(button):not(.window-control-btn), h1, h2, h3, h4, h5, h6 {
+p,
+  span,
+  div:not(button):not(.window-control-btn),
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
   -webkit-app-region: no-drag;
   -moz-user-select: text;
        user-select: text;
@@ -673,12 +715,20 @@ button {
   z-index: 1000;
 }
 
+.mb-1 {
+  margin-bottom: 0.25rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .ml-2 {
@@ -701,6 +751,10 @@ button {
   height: 1rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
 .h-6 {
   height: 1.5rem;
 }
@@ -715,6 +769,10 @@ button {
 
 .w-4 {
   width: 1rem;
+}
+
+.w-5 {
+  width: 1.25rem;
 }
 
 .w-6 {
@@ -753,6 +811,10 @@ button {
   flex-direction: column;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
@@ -777,10 +839,6 @@ button {
   gap: 0.5rem;
 }
 
-.gap-4 {
-  gap: 1rem;
-}
-
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
@@ -800,6 +858,10 @@ button {
 .truncate {
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.whitespace-nowrap {
   white-space: nowrap;
 }
 
@@ -839,29 +901,33 @@ button {
   border-top-width: 1px;
 }
 
-.border-blue-400 {
+.border-gray-500 {
   --tw-border-opacity: 1;
-  border-color: rgb(96 165 250 / var(--tw-border-opacity, 1));
+  border-color: rgb(107 114 128 / var(--tw-border-opacity, 1));
 }
 
-.border-white\/20 {
-  border-color: rgb(255 255 255 / 0.2);
+.border-white\/10 {
+  border-color: rgb(255 255 255 / 0.1);
 }
 
-.border-white\/30 {
-  border-color: rgb(255 255 255 / 0.3);
+.bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
 }
 
-.bg-blue-500\/30 {
-  background-color: rgb(59 130 246 / 0.3);
+.bg-black\/40 {
+  background-color: rgb(0 0 0 / 0.4);
 }
 
-.bg-blue-500\/50 {
-  background-color: rgb(59 130 246 / 0.5);
+.bg-gray-700\/30 {
+  background-color: rgb(55 65 81 / 0.3);
 }
 
-.bg-blue-500\/80 {
-  background-color: rgb(59 130 246 / 0.8);
+.bg-gray-700\/50 {
+  background-color: rgb(55 65 81 / 0.5);
+}
+
+.bg-gray-700\/80 {
+  background-color: rgb(55 65 81 / 0.8);
 }
 
 .bg-white\/10 {
@@ -903,11 +969,6 @@ button {
   text-align: center;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-}
-
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -921,10 +982,6 @@ button {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.font-bold {
-  font-weight: 700;
 }
 
 .font-medium {
@@ -961,8 +1018,7 @@ button {
   opacity: 0;
 }
 
-.drop-shadow-lg {
-  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+.filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
@@ -998,12 +1054,12 @@ button {
   transition-duration: 300ms;
 }
 
-.hover\:bg-blue-500\/70:hover {
-  background-color: rgb(59 130 246 / 0.7);
+.hover\:bg-gray-600\/70:hover {
+  background-color: rgb(75 85 99 / 0.7);
 }
 
-.hover\:bg-blue-600\/80:hover {
-  background-color: rgb(37 99 235 / 0.8);
+.hover\:bg-gray-600\/80:hover {
+  background-color: rgb(75 85 99 / 0.8);
 }
 
 .hover\:bg-white\/20:hover {
@@ -1031,8 +1087,8 @@ button {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-blue-500\/50:focus {
-  --tw-ring-color: rgb(59 130 246 / 0.5);
+.focus\:ring-gray-500\/50:focus {
+  --tw-ring-color: rgb(107 114 128 / 0.5);
 }
 
 .disabled\:cursor-not-allowed:disabled {
@@ -1046,4 +1102,3 @@ button {
 .group:hover .group-hover\:opacity-100 {
   opacity: 1;
 }
-
